--- a/src/app/pages/client/components/locations/locations.component.html
+++ b/src/app/pages/client/components/locations/locations.component.html
@@ -25,7 +25,7 @@
                 <td> <a class="link fs-25 Tajawal-Medium" href="{{item.google_maps_link}}" target="_blank">www.googlemap.com</a></td>
                 <td>{{item.guard_mobile?.replace('+966','')}}</td>
                 <td><button (click)="showDialog(item.id)" class="dialog-btn">عرض</button></td>
-                <td><a class="download-link" href="{{item.building_license}}" download><i class="pi pi-download fs-6"></i></a></td>
+                <td><a class="download-link" href="{{item.building_license}}" target="_blank" download><i class="pi pi-download fs-6"></i></a></td>
               </tr>
             </tbody>
           </table>
