--- a/src/app/pages/locations/locations.component.html
+++ b/src/app/pages/locations/locations.component.html
@@ -34,7 +34,7 @@
                     </div>
                     <div class="guard">
                         <p class="guard-header fs-16 Tajawal-Bold blue-txt-color  m-0">الحارس</p>
-                        <p  style="font-size: 18px;" class="guard-name Tajawal-Medium  m-0">{{item.guard_mobile}}</p>
+                        <p  style="font-size: 18px;" class="guard-name Tajawal-Medium  m-0">{{item.guard_mobile.replace('+966','')}}</p>
                     </div>
                 </div>
             </div>
