--- a/src/app/pages/order/components/location/location-order-detail/location-order-detail.component.html
+++ b/src/app/pages/order/components/location/location-order-detail/location-order-detail.component.html
@@ -43,7 +43,7 @@
                     </div>
                     <div class="building_license mt-2">
                         <p class="fs-16 Tajawal-Medium blue-txt-color m-0">تحميل رخصة البناء</p>
-                        <a class="download_link me-4 mt-1" [href]="data?.building_license" download><i class="pi pi-download fs-4"></i></a>
+                        <a class="download_link me-4 mt-1" target="_blank" [href]="data?.building_license" download><i class="pi pi-download fs-4"></i></a>
                     </div>
                 </div>
             </div>
