--- a/src/app/pages/order/components/payment/payment-order-details/payment-order-details.component.html
+++ b/src/app/pages/order/components/payment/payment-order-details/payment-order-details.component.html
@@ -40,7 +40,7 @@
                     <div>
                         <p class="fs-16 Tajawal-Medium blue-txt-color">تحميل الفاتورة</p>
                         <div class="download-reciet">
-                            <a class="fs-16 Tajawal-Medium greytxt-color m-0"  href="{{data?.evidence_image}}" download><i class="pi pi-download fs-5 text-white"></i></a>
+                            <a class="fs-16 Tajawal-Medium greytxt-color m-0"  href="{{data?.evidence_image}}" target="_blank" download><i class="pi pi-download fs-5 text-white"></i></a>
                         </div>
                     </div>
                 </div>
