--- a/src/app/pages/client/order-details/order-details.component.html
+++ b/src/app/pages/client/order-details/order-details.component.html
@@ -176,7 +176,7 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-4 btn-action my-2 my-lg-0">
-                    <a class="btn download-reciet-btn Tajawal-Bold fs-25">تحميل الفاتورة
+                    <a class="btn download-reciet-btn Tajawal-Bold fs-25" href="{{orderData?.payment_image}}">تحميل الفاتورة
                         <i class="pi pi-download me-5 fs-3"></i>
                     </a>
                 </div>
@@ -201,14 +201,14 @@
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-5 img-detail d-flex align-items-center my-2 my-lg-0">
                     <p class="my-0 Tajawal-Bold fs-25 green-txt-color">تم توصيل الطلب</p>
-                    <div (click)="showDialog()" class="image-container position-relative mx-3">
-                            <img src="assets/dummy.png" alt="img">
+                    <div *ngIf="orderData?.proof_image" (click)="showDialogDelievery()" class="image-container position-relative mx-3">
+                            <img src="{{orderData?.proof_image}}" alt="img">
                             <div class="img-overlay d-flex justify-content-center align-items-center">
                                 <i class="pi pi-search-plus text-white fs-2"></i>
                             </div>
                     </div>
-                    <p-dialog [(visible)]="visible" [modal]="true" [style]="{ width: '50vw' }" [draggable]="false" [resizable]="false">
-                       <img src="assets/dummy.png" width="100%" alt="img">
+                    <p-dialog [(visible)]="visibleDelieveryImage" [modal]="true" [style]="{ width: '50vw' }" [draggable]="false" [resizable]="false">
+                       <img src="{{orderData?.proof_image}}" width="100%" alt="img">
                    </p-dialog>
                 </div>
              </div>
@@ -225,10 +225,10 @@
                             <p class="Tajawal-Medium fs-20 text-white">{{card?.account_owner_name}}</p>
                         </div>
                         <div class="card-number">
-                            <p style="text-align: left;" class="Tajawal-Medium fs-22 text-white">{{card?.account_number}}</p>
+                            <p style="text-align: center;" class="Tajawal-Medium fs-22 text-white">{{card?.account_number}}</p>
                         </div>
                         <div class="iban">
-                            <p class="Tajawal-Medium fs-16 text-white">الايبان : {{card?.iban}} </p>
+                            <p class="Tajawal-Medium fs-16 text-white">الايبان : SA{{card?.iban}} </p>
                         </div>
                     </div>
                 </div>
@@ -262,12 +262,23 @@
 
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-4 upload-img-detail d-flex flex-column justify-content-center align-items-center my-2 my-lg-0">
+                <div *ngIf="!orderData?.payment_image"  class="col-sm-12 col-md-12 col-lg-4 upload-img-detail d-flex flex-column justify-content-center align-items-center my-2 my-lg-0">
                     <p class="my-0 Tajawal-Bold fs-25 text-danger">الرجاء ارفاق صورة الإيصال</p>
                     <div class="upload-image-container mt-3">
                         <label class="Tajawal-Bold fs-16" for="upload-img">Select Image</label>
-                        <input type="file" name="reciet_img" id="upload-img" accept="*">
+                        <input type="file" name="reciet_img" id="upload-img"  accept="image/*" (change)="changeImage($event)">
                     </div>
+                </div>
+                <div *ngIf="orderData?.payment_image" class="col-sm-12 col-md-12 col-lg-4 img-detail d-flex align-items-center my-2 my-lg-0">
+                    <div (click)="showDialogPayment()" class="image-container position-relative mx-3">
+                            <img src="{{orderData?.payment_image}}" alt="img">
+                            <div class="img-overlay d-flex justify-content-center align-items-center">
+                                <i class="pi pi-search-plus text-white fs-2"></i>
+                            </div>
+                    </div>
+                    <p-dialog [(visible)]="visiblePaymentImage" [modal]="true" [style]="{ width: '50vw' }" [draggable]="false" [resizable]="false">
+                        <img src="{{orderData?.payment_image}}" width="100%" alt="img">
+                    </p-dialog>
                 </div>
              </div>
             <!-- End Row For payment Order Details -->
