--- a/src/app/pages/transaction/components/order-details/order-details.component.html
+++ b/src/app/pages/transaction/components/order-details/order-details.component.html
@@ -109,9 +109,9 @@
                 </div>
             </div>
             <div  class="col-sm-12 col-md-12 col-lg-4 btn-action my-2 my-lg-0">
-                <a href="#" target="_blank" class="btn download-reciet-btn Tajawal-Bold fs-25">تحميل الفاتورة
+                <button (click)="downloadReciet(response?.id)" target="_blank" class="btn download-reciet-btn Tajawal-Bold fs-25">تحميل الفاتورة
                     <i class="pi pi-download me-5 fs-3"></i>
-                </a>
+                </button>
             </div>
          </div>
          <!-- End Row For Reciet Order -->
