--- a/src/app/pages/supplier/order-detail/order-detail.component.html
+++ b/src/app/pages/supplier/order-detail/order-detail.component.html
@@ -197,9 +197,9 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-5 btn-action my-2 my-lg-0">
-                    <a class="btn download-reciet-btn Tajawal-Bold fs-25">تحميل الفاتورة
+                    <button (click)="downloadReciet(orderData?.id)" target="_blank" class="btn download-reciet-btn Tajawal-Bold fs-25">تحميل الفاتورة
                         <i class="pi pi-download me-5 fs-3"></i>
-                    </a>
+                    </button>
                 </div>
              </div>
              <!-- End Row For Reciet Order -->
